--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -3,8 +3,6 @@
 	<PropertyGroup>
 		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
 		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
-		<!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
-		<!-- <TargetFrameworks>$(TargetFrameworks);net8.0-tizen</TargetFrameworks> -->
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
@@ -21,6 +19,21 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+		<PackageReference Include="Ditto" Version="4.7.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Remove="Platforms\Windows\" />
+	  <None Remove="Platforms\Tizen\" />
+	  <None Remove="Platforms\MacCatalyst\" />
+	  <None Remove="Platforms\iOS\" />
+	  <None Remove="Platforms\Android\" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Platforms\Windows\" />
+	  <Folder Include="Platforms\Tizen\" />
+	  <Folder Include="Platforms\MacCatalyst\" />
+	  <Folder Include="Platforms\iOS\" />
+	  <Folder Include="Platforms\Android\" />
+	</ItemGroup>
 </Project>
