--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -32,7 +32,15 @@
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
 		<PackageReference Include="Ditto" Version="4.7.1" />
 	</ItemGroup>
+	<!-- Resources - Packaging -->
 	<ItemGroup>
+  		<None Include="DittoTools.PresenceViewer.targets" Pack="True" PackagePath="buildTransitive\" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="Resources\Presence\**" Pack="True" PackagePath="buildTransitive\Resources\Presence\" />
+	</ItemGroup>
+	<ItemGroup>
+		<!-- For direct reference -->
 		<MauiAsset Include="Resources\Presence\**">
 			<Link>%(RecursiveDir)%(Filename)%(Extension)</Link>
 		</MauiAsset>
