Fix for https://github.com/getditto/DittoDotnetTools/issues/5 (will be working with Ditto >= 4.8.0)

--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -24,6 +24,8 @@
 		<PackageProjectUrl>https://ditto.live</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/getditto/DittoDotnetTools</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+
+		<_DittoIncludeNativeAndroidLibs>False</_DittoIncludeNativeAndroidLibs>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="../LICENSE" Pack="true" PackagePath="\" />
