--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -16,7 +16,7 @@
 
 		<RootNamespace>DittoTools.PresenceViewer</RootNamespace>
 		<PackageID>DittoTools.PresenceViewer</PackageID>
-		<Version>1.0.0-alpha.2</Version>
+		<Version>1.0.0</Version>
 		<Description>Diagnostic tools for Ditto.</Description>
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<PackageTags>Ditto;Sync;Edge;PeerToPeer;P2P;Mesh;MAUI;.NET;iOS;Android;Debug;Diagnostic;Tools;Presence;PresenceViewer</PackageTags>
