Add MacCatalyst support + update sample app.

--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net8.0-android;net8.0-ios;</TargetFrameworks>
+		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
 		<!-- <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks> -->
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
@@ -36,6 +36,6 @@
 		<PackageReference Include="DittoPresenceViewerCore" Version="2.1.0" />
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
-		<PackageReference Include="Ditto" Version="4.8.4" />
+		<PackageReference Include="Ditto" Version="4.11.0-maccatalyst.2" />
 	</ItemGroup>
 </Project>
