--- a/DittoHeartbeat/DittoHeartbeat.csproj
+++ b/DittoHeartbeat/DittoHeartbeat.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net8.0;net8.0-android;net8.0-ios</TargetFrameworks>
+		<TargetFrameworks>net8.0;net8.0-android;net8.0-ios;net8.0-maccatalyst</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
@@ -22,6 +22,6 @@
 		<None Include="../icon.png" Pack="true" PackagePath="\" />
   	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Ditto" Version="4.8.4" />
+		<PackageReference Include="Ditto" Version="4.11.0-maccatalyst.2" />
 	</ItemGroup>
 </Project>
