--- a/SampleApp/Platforms/MacCatalyst/Info.plist
+++ b/SampleApp/Platforms/MacCatalyst/Info.plist
@@ -32,6 +32,16 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>Uses Bluetooth to connect and sync with nearby devices</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Uses Bluetooth to connect and sync with nearby devices</string>
+	<key>NSLocalNetworkUsageDescription</key>
+	<string>Uses WiFi to connect and sync with nearby devices</string>
+	<key>NSBonjourServices</key>
+	<array>
+		<string>_http-alt._tcp.</string>
+	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 </dict>
