--- a/DittoHeartbeat/DittoHeartbeat.csproj
+++ b/DittoHeartbeat/DittoHeartbeat.csproj
@@ -15,7 +15,9 @@
 		<PackageProjectUrl>https://ditto.live</PackageProjectUrl>
 		<RepositoryUrl>https://github.com/getditto/DittoDotnetTools</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
+		
 		<_DittoIncludeNativeAndroidLibs>False</_DittoIncludeNativeAndroidLibs>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="../LICENSE" Pack="true" PackagePath="\" />
