--- a/DittoPresenceViewer/DittoPresenceViewer.csproj
+++ b/DittoPresenceViewer/DittoPresenceViewer.csproj
@@ -25,6 +25,7 @@
 		<RepositoryType>git</RepositoryType>
 
 		<_DittoIncludeNativeAndroidLibs>False</_DittoIncludeNativeAndroidLibs>
+		<EnableWindowsTargeting>true</EnableWindowsTargeting>
 	</PropertyGroup>
 	<ItemGroup>
 		<None Include="../LICENSE" Pack="true" PackagePath="\" />
